--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "mysql2": "^3.14.3",
